Implement db.mp package
Allows conveniently loading materials from the materialsproject.org database and caching them locally for further use.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-# VSCode
-*/.vscode/
-.vscode/
+# =Project_Specific====================
 
-# Custom
-gtag.sh
+# Secrets
+*.key
+
+# Data
+data/*/
 
 # ASE specific
 *.traj
+
+# VSCode configuration
+*/.vscode/
+.vscode/
+
+# Various
+gtag.sh
+tutorials/
+
+# =From_Template=======================
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
