--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,15 +16,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.10
+    - name: Install OpenKim and download models
+      run:
+        sudo apt-get install libkim-api-dev openkim-models
+#       bash install_OpenKim_models.sh # WIP
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest wheel numpy scipy ase
         pip install asap3
+        pip install mp-api
+#       pip install kimpy
+#       pip install mpcontribs-client
+#       pip install optimade[http_client]
+#       pip install kim-query
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -33,5 +42,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        MP_API_KEY: ${{secrets.MP_API_KEY}}
       run: |
         pytest
