--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
+#       bash install_OpenKim_models.sh
+#       pip install kimpy
+#       pip install mpcontribs-client
+#       pip install optimade[http_client]
+#       pip install kim-query
+
 name: Python application
 
 on:
@@ -16,14 +22,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python 3.10.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: 3.10.9
     - name: Install OpenKim and download models
       run:
         sudo apt-get install libkim-api-dev openkim-models
-#       bash install_OpenKim_models.sh # WIP
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -31,10 +36,6 @@ jobs:
         pip install asap3
         pip install mp-api
         pip install sqlitedict
-#       pip install kimpy
-#       pip install mpcontribs-client
-#       pip install optimade[http_client]
-#       pip install kim-query
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
